bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "aspect_rules_py", version = "1.11.2")

bazel_dep(name = "rules_python_gazelle_plugin", version = "1.9.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.14",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.14",
    requirements_darwin = "//python:requirements_macos.txt",
    requirements_linux = "//python:requirements_linux.txt",
)
use_repo(pip, "pip")
