"Terraform toolchain configuration"

# `terraform.bzl` lives in `bazel/modules/terraform.bzl` and houses the
# tf_root / tf_provider_target / toolchain Starlark layer. Wired via
# local_path_override since it isn't published to BCR.
bazel_dep(name = "terraform.bzl", version = "0.0.0")

local_path_override(
    module_name = "terraform.bzl",
    path = "bazel/modules/terraform.bzl",
)

# `versions.tf` declares the required providers + version constraints
# (the canonical terraform shape, what Renovate's terraform manager
# discovers automatically). `.terraform.lock.hcl` in the same dir is
# terraform's own lockfile — written by `terraform providers lock` and
# kept fresh by Renovate's `terraform-lockfile` manager.
terraform = use_extension("@terraform.bzl//terraform:extensions.bzl", "terraform")
terraform.toolchain(version = "1.14.8")
terraform.install(
    name = "terraform_providers",
    lock_file = "//bazel/include:.terraform.lock.hcl",
)
use_repo(terraform, "terraform_providers", "terraform_toolchains")

register_toolchains("@terraform_toolchains//:terraform_toolchain")
