"""Bazel-native RPM consumption: lockfile-pinned repo, per-package tars, merged sqlite rpmdb.

Shape mirrors rules_jvm_external / rules_apt: an `rpm.install(...)` tag class
takes the package list inline, a checked-in JSON lockfile pins versions+sha256,
and `bazel run @<name>//:pin` regenerates the lockfile from the declared list.

Senku consumes this module via:

    rpm = use_extension("@rules_rpm//rpm:extensions.bzl", "rpm")
    rpm.install(
        name = "hummingbird",
        repo_url = "https://koji-s3-cache.hummingbird-project.io/.../public-hummingbird",
        gpg_key = "//bazel/modules/rules_rpm:hummingbird-release.pgp",  # consumer-supplied
        architectures = ["x86_64", "aarch64"],
        packages = ["tzdata", "ca-certificates", "mailcap", "glibc", ...],
        lock_file = "//:hummingbird_install.json",
    )
    use_repo(rpm, "hummingbird")
"""

module(
    name = "rules_rpm",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
# Spoke BUILD.bazel files emit a `package_metadata` target per (package, arch)
# so the supply-chain `gather_metadata` aspect surfaces each rpm as its own
# component in the image SBOM (matching the per-`.deb` shape of
# //oci/distroless/common:package.BUILD.tmpl).
bazel_dep(name = "package_metadata", version = "0.0.10")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.from_file(
    go_mod = "//:go.mod",
)

# Vendored Go deps for the internal tools. Only rpm-extract is implemented
# today; the use_repo list grows as rpmdb-merge (sqlite) and pin wire in
# their dependencies.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_klauspost_compress",       # zstd writer used by rpmdb-merge
    "com_github_protonmail_go_crypto",     # openpgp: pin verifies repomd.xml.asc; rpm-extract verifies in-rpm signature; shared keyring loader in tools/internal/keyring
    "com_github_sassoftware_go_rpmutils",  # RPM header + cpio parser used by rpm-extract
    "org_modernc_sqlite",                  # pure-Go sqlite for rpmdb-merge
)
