"""Bazel rules for generating + executing Terraform roots from Starlark.

Shape:

  * `tf_root(name, docs, backend_bucket, ...)` emits `main.tf.json` +
    `backend.tf.json` (+ optionally `providers.tf.json` /
    `.terraform.lock.hcl` / `_providers/...` mirror) and per-verb
    runnables (`<name>.plan`, `<name>.apply`, `<name>.destroy`).
  * `terraform.toolchain(version=...)` pins the terraform CLI.
  * `terraform.install(name, lock_file)` declares a hub repo of
    `tf_provider_target`s consumed by `tf_root(providers = […])`.
    `lock_file` is a terraform-native `.terraform.lock.hcl`; the
    standard `terraform providers lock` flow (or Renovate's
    `terraform-lockfile` manager) updates it.

Consumers `bazel_dep` this module, register the toolchain, declare a
single `terraform.install(...)` against the workspace's checked-in
`.terraform.lock.hcl`, and call `tf_root(...)` from BUILD files.
"""

module(
    name = "terraform.bzl",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
